# wine_chroot

./: .gitignore  CLAUDE-obsolete.md  CLAUDE.md  Notas de creación ambiente chroot.md  README.md  TODO.md  pyproject.toml  wine-chroot.toml.example
.github/: DESCRIPTION  copilot-instructions.md  setup-repo-metadata.sh
bash/: make_wine_chroot_desktop.sh
docs/: DEVELOPMENT.md  README-obsolete.md  README.md  RICH_ARGPARSE_GUIDE.md  chroot-setup-v2_es.md  chroot-setup.md  chroot-setup_es.md
python/: make_wine_chroot_desktop.py  requirements.txt
src/: run-chroot-v2.sh  run-chroot.sh  runchroot-v2.sh  runchroot.sh  v1.txt  v2.txt  winegui.sh
src/wine_chroot/: __init__.py  chroot.py  cli.py  config.py  console_styles.py  desktop.py  exit_codes.py  icons.py  runner.py  utils.py
