[project]
name = "wine-chroot"
version = "0.1.0"
description = "Generate .desktop launchers that run Windows apps with Wine inside Debian schroot environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"rich",
	"rich-argparse",
	"pytest",
]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
# Python dependencies are managed with uv.
# System dependencies:
#   Host: schroot, icoutils (wrestool, icotool)
#   Chroot: wine

[project.scripts]
wine-chroot = "python.make_wine_chroot_desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[dependency-groups]
dev = []
