[project]
name = "wine-chroot"
version = "0.1.0"
description = "Run Windows amd64 applications on ARM64 Linux using Wine in a Debian chroot"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Wine Chroot Contributors" }
]
keywords = ["wine", "chroot", "arm64", "windows", "debian", "emulation"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/gatuno/wine_chroot"
Issues = "https://github.com/gatuno/wine_chroot/issues"
Repository = "https://github.com/gatuno/wine_chroot"

# System dependencies (not managed by Python):
# Host: schroot, debootstrap, qemu-user-static, binfmt-support, icoutils
# Chroot: wine, wine32, wine64, winetricks
